# Adapt-App

./: .gitignore  LICENSE  README.md  README.txt  adaptations.db  flashcards.db  main.py  notes.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
Archive/: atHomeFSRS.py  ffmodel.py  flashcards.db  main.py  universalmodel-ai.py
Backend/: adaptations.db
Backend/Core/: db.py  main.py  requirements.txt  test.py  utils.py
NeuroMods/: flags.nm
NeuroMods/Bar/: BarGame.nm  BarText.nm  BarTotal.nm  bar copy.nm  bar.nm  customer_viewport.json  customers.txt  potentialOrders.nm  till_buttons.json  till_viewport.json
NeuroMods/Flags/: countries.nm  flags.nm  international_organizations.nm
NeuroMods/Flags/Countries/: Flags1.txt  FlagsCards.txt
core/: adaptations.db  app.py  database.py  main.py  test.py  tuning_settings.json  universal_scheduler.py  utils.py
interfaces/: tui.py
neuromods/: flags.nm  flashcards_export.csv  math.nm  nm.csv  physics.nm  run.nm
scripts/: generate_build_guide_pdf.py
src/adapt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bar/: __init__.py  customer_screen.py  customer_viewport_tool.py  demand_display.py  game.py  genOrders.py  item_icon_tool.py  item_types.py  till_button_tool.py  till_frame.py  till_viewport_tool.py  ui_fonts.py  ui_theme.py
src/core/: db.py  io.py  main.py  scheduler.py  test.py  utils.py
